add /user/search api method and influxdb and grafana docker images

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ DB_PORT=15432
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=postgres
+
+INFLUXDB_USERNAME=admin
+INFLUXDB_PASSWORD=12345678
+INFLUXDB_ORG=my-org
+INFLUXDB_BUCKET=ha
+INFLUXDB_TOKEN=token
